# fastal-langgraph-toolkit

./: AnalisiSTT.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/fastal/langgraph/toolkit/: __init__.py
src/fastal/langgraph/toolkit/models/: factory.py
src/fastal/langgraph/toolkit/models/providers/embeddings/: openai.py
src/fastal/langgraph/toolkit/models/providers/llm/: openai.py
