[project]
name = "fastal-langgraph-toolkit"
version = "0.1.0"
description = "Common utilities and tools for LangGraph agents by Fastal"
readme = "README.md"
authors = [
    { name = "Stefano Capezzone", email = "stefano@capezzone.it" }
]
requires-python = ">=3.10"
keywords = ["langgraph", "langchain", "ai", "agents", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain-core>=0.1",
    "langgraph>=0.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.1"]
anthropic = ["langchain-anthropic>=0.1"]
ollama = ["langchain-ollama>=0.1"]
bedrock = ["langchain-aws>=0.1", "boto3>=1.26"]
all = [
    "langchain-openai>=0.1",
    "langchain-anthropic>=0.1", 
    "langchain-ollama>=0.1",
    "langchain-aws>=0.1",
    "boto3>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastal"]
